[package]
name = "yew-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19.3"
yew-router = "0.16"

web-sys = "0.3.56"
weblog = "0.3.0"
wasm-bindgen-futures = "0.4"
reqwest="0.11"
serde_json = "1"
gloo = "0.6.1"
